Choose the head of department